refactor(mcp-adapter): replace ObjectMapper with JsonMapper and adjust implementation accordingly